// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectNetwork should render 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-owns="downshift-1-menu"
    data-testid="SelectNetwork"
    role="combobox"
  >
    <label
      for="downshift-0-input"
      id="downshift-1-label"
    />
    <div
      class="sc-AxheI IkGcK"
      data-testid="SelectNetworkInput"
    >
      <div
        class="sc-AxhCb sc-AxhUy jFkFxS px-4"
      >
        <div
          class="sc-AxjAm IjnG border-theme-neutral-light text-theme-neutral"
          data-testid="SelectNetworkInput__network"
        />
      </div>
      <input
        aria-autocomplete="list"
        aria-controls="downshift-1-menu"
        aria-labelledby="downshift-1-label"
        autocomplete="off"
        class="sc-AxiKw ffjERP overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pl-15"
        data-testid="SelectNetworkInput__input"
        id="downshift-0-input"
        placeholder="Enter a network name"
        value=""
      />
    </div>
  </div>
  <ul
    aria-labelledby="downshift-1-label"
    id="downshift-1-menu"
    role="listbox"
  />
</div>
`;

exports[`SelectNetwork should render with networks 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-owns="downshift-3-menu"
    data-testid="SelectNetwork"
    role="combobox"
  >
    <label
      for="downshift-2-input"
      id="downshift-3-label"
    />
    <div
      class="sc-AxheI IkGcK"
      data-testid="SelectNetworkInput"
    >
      <div
        class="sc-AxhCb sc-AxhUy jFkFxS px-4"
      >
        <div
          class="sc-AxjAm IjnG border-theme-neutral-light text-theme-neutral"
          data-testid="SelectNetworkInput__network"
        />
      </div>
      <input
        aria-autocomplete="list"
        aria-controls="downshift-3-menu"
        aria-labelledby="downshift-3-label"
        autocomplete="off"
        class="sc-AxiKw ffjERP overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pl-15"
        data-testid="SelectNetworkInput__input"
        id="downshift-2-input"
        placeholder="Enter a network name"
        value=""
      />
    </div>
  </div>
  <ul
    aria-labelledby="downshift-3-label"
    id="downshift-3-menu"
    role="listbox"
  >
    <li
      aria-selected="false"
      class="inline-block pt-6 mr-6 cursor-pointer"
      data-testid="SelectNetwork__NetworkIcon--container"
      id="downshift-3-item-0"
      role="option"
    >
      <div
        aria-label="Ark"
        class="sc-AxjAm gIAugl border-theme-danger-light text-theme-danger-400"
        data-testid="NetworkIcon-ARK-mainnet"
      >
        <div
          class="sc-AxirZ hyqZof"
          data-testid="NetworkIcon__icon"
          height="26"
          width="26"
        >
          <svg>
            ark.svg
          </svg>
        </div>
      </div>
    </li>
    <li
      aria-selected="false"
      class="inline-block pt-6 mr-6 cursor-pointer"
      data-testid="SelectNetwork__NetworkIcon--container"
      id="downshift-3-item-1"
      role="option"
    >
      <div
        aria-label="Ark Devnet"
        class="sc-AxjAm gIAugl border-theme-primary-100 text-theme-primary-400"
        data-testid="NetworkIcon-ARK-devnet"
      >
        <div
          class="sc-AxirZ hyqZof"
          data-testid="NetworkIcon__icon"
          height="26"
          width="26"
        >
          <svg>
            ark.svg
          </svg>
        </div>
      </div>
    </li>
    <li
      aria-selected="false"
      class="inline-block pt-6 mr-6 cursor-pointer"
      data-testid="SelectNetwork__NetworkIcon--container"
      id="downshift-3-item-2"
      role="option"
    >
      <div
        aria-label="Bitcoin"
        class="sc-AxjAm gIAugl border-theme-warning-200 text-theme-warning-400"
        data-testid="NetworkIcon-BTC-livenet"
      >
        <div
          class="sc-AxirZ hyqZof"
          data-testid="NetworkIcon__icon"
          height="26"
          width="26"
        >
          <svg>
            btc.svg
          </svg>
        </div>
      </div>
    </li>
  </ul>
</div>
`;
